Fixed almost all of the bugs I was looking at

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,14 @@
-<% provided(:title, "About")%>
+<% provide(:title, "About")%>
 
 <h1>About</h1>
 <p>
+<center>
  Welcome to Share-It!
+ </center>
+</p>
 
-Share-It is an application that will allow you to quickly and easily share your contact information with anyone in your room. Enjoy!
-
-back end/Ruby on Rails - David Ivey IOS/Swift - David Chen Android/Java - Joe Shvedsky
+<p>
+<center>
+Share-It is an application that will allow you to quickly and easily share your contact information with anyone around you. Enjoy!
+</center>
 </p>
