--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
       <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label :contact %>
-      <%= f.email_field :contact, class: 'form-control' %>
+      <%= f.text_field :contact, class: 'form-control' %>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
