--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-    <% flash.each do |message_type, message| %>
-         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+     <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
