--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,5 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<h1>New User</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-    <%= render 'shared/error_messages' %>
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+<%= render 'form' %>
 
-      <%= f.label :contact %>
-      <%= f.text_field :contact, class: 'form-control' %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
-  </div>
-</div>
+<%= link_to 'Back', users_path %>
