--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Users</h1>
+<h1>All Users</h1>
 
 <table>
  <colgroup>
- <col span = "1" style = "width: 25%;">
- <col span = "1" style = "width: 25%;">
- <col span = "1" style = "width: 25%;">
+ <col span = "1" style = "width: 30%;">
+ <col span = "1" style = "width: 30%;">
+ <col span = "1" style = "width: 30%;">
 </colgroup>
   <thead>
     <tr>
@@ -21,10 +21,10 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.contact %></td>
-        <td><%= Admin.find(user.admin_id).username %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to Admin.find(user.admin_id).username, user.admin, method: :get %></td>
+        <td><%= link_to 'User Profile', user %></td>
+        <td><% link_to 'Edit', edit_user_path(user) %></td>
+        <td><% link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
