--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,5 +2,5 @@
 
 <h1>Contact</h1>
 <p>
-if you have any questions please contact us at fake_email@working_on_it.com
+if you have any questions please contact us at junk_mail@mailzilla.com. We promise to ignore your emails as soon as we can. ;-)
 </p>
